# umbra_slice

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
benches/: as_bytes.rs
src/: lib.rs
