[package]
name = "umbra_slice"
version = "0.1.0"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
description = "An owned slice type with German string optimizations"
edition = "2021"
keywords = ["small", "str", "slice"]
readme = "README.md"
repository = "https://github.com/the-mikedavis/umbra_slice"
license = "MPL-2.0 OR Apache-2.0"
rust-version = "1.70"
